# ZabkiWPolsce

./: README.md
zabki_w_polsce/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
zabki_w_polsce/.github/workflows/: cd.yml  ci.yml  continuous-training.yml
zabki_w_polsce/conf/base/: catalog.yml  parameters.yml
zabki_w_polsce/data/01_raw/: city_population.csv  extra_city_centers.csv
zabki_w_polsce/notebooks/: 01_baseline.ipynb
zabki_w_polsce/src/zabki_prediction/: __init__.py  pipeline_registry.py  settings.py
zabki_w_polsce/src/zabki_prediction/api/: main.py
zabki_w_polsce/src/zabki_prediction/pipelines/: __init__.py
zabki_w_polsce/src/zabki_prediction/pipelines/site_selection/: __init__.py  nodes.py  pipeline.py
zabki_w_polsce/src/zabki_prediction/ui/: streamlit_app.py
zabki_w_polsce/src/zabki_w_polsce.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
zabki_w_polsce/tests/: test_geojson_nodes.py
