[project]
name = "zabki-w-polsce"
version = "0.1.0"
description = "Predykcja atrakcyjnych lokalizacji dla nowych sklepow Zabka w Polsce."
requires-python = ">=3.11,<3.12"
dependencies = [
  "kedro>=0.19.0,<0.20.0",
  "kedro-datasets>=3.0.0,<5.0.0",
  "pandas>=2.1.0,<3.0.0",
  "numpy>=1.26.0,<2.2.0",
  "scikit-learn>=1.4.0,<1.7.0",
  "mlflow>=2.12.0,<3.0.0",
  "autogluon.tabular>=1.1.0,<1.4.0",
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",
  "streamlit>=1.34.0,<2.0.0",
  "joblib>=1.3.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.4.0,<1.0.0",
]

[project.scripts]
zabki-api = "zabki_prediction.api.main:run"

[tool.kedro]
package_name = "zabki_prediction"
project_name = "zabki_w_polsce"
kedro_init_version = "0.19.0"
source_dir = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.kedro_telemetry]
project_id = "e39306e3899c4c00ae436f70ad696b97"
